# hs-opentelemetry

./: .dockerignore  .env  .gitignore  .gitmodules  Makefile  README.md  cabal.project  cabal.project.freeze  docker-compose.yaml  flake.nix  fourmolu.yaml  hie.yaml  shell.nix  stack-ghc-8.10.nix  stack-ghc-8.10.yaml  stack-ghc-8.12.yaml  stack-ghc-9.0.yaml  stack-ghc-9.2.nix  stack-ghc-9.2.yaml  stack.nix  stack.yaml
.github/workflows/: haskell.yml
api/: hs-opentelemetry-api.cabal  package.yaml
api/src/OpenTelemetry/: Attribute.hs  Attributes.hs  Baggage.hs  Common.hs  Context.hs  Exporter.hs  Processor.hs  Propagator.hs  Resource.hs  Util.hs
api/src/OpenTelemetry/Attribute/: Attribute.hs  AttributeCollection.hs  Attributes.hs  Key.hs
api/src/OpenTelemetry/Attributes/: Key.hs  Map.hs
api/src/OpenTelemetry/Context/: ThreadLocal.hs  Types.hs
api/src/OpenTelemetry/Contrib/: CarryOns.hs
api/src/OpenTelemetry/Internal/Trace/: Id.hs  Types.hs
api/src/OpenTelemetry/Logging/: Core.hs
api/src/OpenTelemetry/Resource/: Cloud.hs  Container.hs  DeploymentEnvironment.hs  Device.hs  FaaS.hs  Host.hs  Kubernetes.hs  OperatingSystem.hs  Process.hs  Service.hs  Telemetry.hs  Webengine.hs
api/src/OpenTelemetry/Trace/: Core.hs  Id.hs  Monad.hs  Sampler.hs  TraceState.hs
api/src/OpenTelemetry/Trace/Id/: Generator.hs
api/test/: Spec.hs
examples/aws-s3/: Makefile  aws-s3-example.cabal  main.hs
examples/grpc-echo/: EchoClient.hs  EchoServer.hs  README.md  Setup.hs  grpc-echo-example.cabal
examples/hdbc-mysql/: hdbc-mysql-example.cabal  main.hs
examples/hedis/: Makefile  client.hs  hedis-example.cabal  main.hs  pubsub.hs
examples/herp-logger/: herp-logger-example.cabal  main.hs
examples/hspec/: hspec-example.cabal  package.yaml
examples/http-server/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml  http-server.cabal  main.hs  otelcol.yaml
examples/yesod-minimal/: .gitignore  Makefile  README.md  docker-compose.yaml  package.yaml  yesod-minimal.cabal
examples/yesod-minimal/src/: Minimal.hs  Subsite.hs
examples/yesod-minimal/src/Subsite/: Data.hs
examples/yesod-subsite/: Makefile
examples/yesod-subsite/src/: main.hs
exporters/handle/: hs-opentelemetry-exporter-handle.cabal  package.yaml
exporters/in-memory/: hs-opentelemetry-exporter-in-memory.cabal  package.yaml
exporters/in-memory/src/OpenTelemetry/Exporter/: InMemory.hs
exporters/jaeger/: hs-opentelemetry-exporter-jaeger.cabal  package.yaml
exporters/otlp/: hs-opentelemetry-exporter-otlp.cabal  package.yaml
exporters/otlp/src/OpenTelemetry/Exporter/: OTLP.hs
exporters/prometheus/: hs-opentelemetry-exporter-prometheus.cabal  package.yaml
exporters/zipkin/: hs-opentelemetry-exporter-zipkin.cabal  package.yaml
instrumentation/amazonka/: hs-opentelemetry-instrumentation-amazonka.cabal
instrumentation/amazonka/src/OpenTelemetry/Instrumentation/: Amazonka.hs
instrumentation/cloudflare/: hs-opentelemetry-instrumentation-cloudflare.cabal  package.yaml
instrumentation/cloudflare/src/OpenTelemetry/Instrumentation/: Cloudflare.hs
instrumentation/conduit/: hs-opentelemetry-instrumentation-conduit.cabal  package.yaml
instrumentation/conduit/src/OpenTelemetry/Instrumentation/: Conduit.hs
instrumentation/grpc-haskell/: README.md  hs-opentelemetry-instrumentation-grpc-haskell.cabal
instrumentation/grpc-haskell/src/OpenTelemetry/Instrumentation/: GRPC.hs
instrumentation/grpc-haskell/src/OpenTelemetry/Instrumentation/GRPC/: Client.hs
instrumentation/hdbc/: hs-opentelemetry-instrumentation-HDBC.cabal
instrumentation/hdbc-mysql/: hs-opentelemetry-instrumentation-HDBC-mysql.cabal
instrumentation/hdbc/src/OpenTelemetry/Instrumentation/: HDBC.hs
instrumentation/hedis/: Setup.hs  functions.txt  hs-opentelemetry-instrumentation-hedis.cabal
instrumentation/hedis/src/OpenTelemetry/Instrumentation/: Hedis.hs
instrumentation/hedis/src/OpenTelemetry/Instrumentation/Hedis/Internal/: Wrapper.hs
instrumentation/herp-logger-datadog/: hs-opentelemetry-instrumentation-herp-logger-datadog.cabal
instrumentation/herp-logger-datadog/src/OpenTelemetry/Instrumentation/Herp/Logger/: Datadog.hs
instrumentation/hspec/: hs-opentelemetry-instrumentation-hspec.cabal  package.yaml
instrumentation/http-client/: hs-opentelemetry-instrumentation-http-client.cabal  package.yaml
instrumentation/persistent/: hs-opentelemetry-instrumentation-persistent.cabal  package.yaml
instrumentation/persistent-mysql/: hs-opentelemetry-instrumentation-persistent-mysql.cabal
instrumentation/postgresql-simple/: hs-opentelemetry-instrumentation-postgresql-simple.cabal  package.yaml
instrumentation/wai/: hs-opentelemetry-instrumentation-wai.cabal  package.yaml
instrumentation/yesod/: hs-opentelemetry-instrumentation-yesod.cabal  package.yaml
nix/: ghc.nix  haskell-packages.nix  sources.json
otlp/: hs-opentelemetry-otlp.cabal  package.yaml
propagators/b3/: hs-opentelemetry-propagator-b3.cabal  package.yaml
propagators/datadog/: .stylish-haskell.yaml  hs-opentelemetry-propagator-datadog.cabal
propagators/datadog/benchmark/header-codec/: main.hs
propagators/datadog/old-src/: Old.hs  Raw.hs  String.hs
propagators/datadog/src/OpenTelemetry/Propagator/: Datadog.hs
propagators/datadog/src/OpenTelemetry/Propagator/Datadog/: Internal.hs
propagators/datadog/test/spec/OpenTelemetry/Propagator/: DatadogSpec.hs
propagators/datadog/test/spec/OpenTelemetry/Propagator/Datadog/: InternalSpec.hs
propagators/jaeger/: hs-opentelemetry-propagator-jaeger.cabal  package.yaml
propagators/w3c/: hs-opentelemetry-propagator-w3c.cabal  package.yaml
sdk/: hs-opentelemetry-sdk.cabal  package.yaml
sdk/src/OpenTelemetry/: Trace.hs
sdk/src/OpenTelemetry/Processor/: Batch.hs  Simple.hs
sdk/test/OpenTelemetry/: TraceSpec.hs
semantic-conventions/: Setup.hs  hs-opentelemetry-semantic-conventions.cabal
utils/exceptions/: hs-opentelemetry-utils-exceptions.cabal  package.yaml
vendors/datadog/: hs-opentelemetry-vendor-datadog.cabal
vendors/honeycomb/: hs-opentelemetry-vendor-honeycomb.cabal  package.yaml
(+28 files in other folders)
