cabal-version: >= 1.10

name: hedis-example
version: 0.0.0
build-type: Simple

executable hedis-example
  hs-source-dirs: .
  main-is: main.hs
  build-depends: base == 4.*,
                 hs-opentelemetry-api,
                 hs-opentelemetry-sdk,
                 hs-opentelemetry-instrumentation-hedis,
                 mtl,
                 text
  ghc-options: -Wall
               -Wcompat
               -threaded
               -with-rtsopts=-N
  default-language: Haskell2010
