cabal-version: 2.4

name: hs-opentelemetry-instrumentation-amazonka
version: 0.0.0.0
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@herp.co.jp

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  default-language: Haskell2010

library
  import: common
  hs-source-dirs: src
  exposed-modules: OpenTelemetry.Instrumentation.Amazonka
  other-modules: Paths_hs_opentelemetry_instrumentation_amazonka
  autogen-modules: Paths_hs_opentelemetry_instrumentation_amazonka
  build-depends: hs-opentelemetry-api,
                 amazonka >= 2,
                 http-client,
                 text,
                 thread-local-storage
  ghc-options: -Wno-name-shadowing
  if impl(ghc >= 6.4)
    ghc-options: -Wincomplete-record-updates
  if impl(ghc >= 6.8)
    ghc-options: -Wmonomorphism-restriction
  if impl(ghc >= 7.0)
    ghc-options: -Wmissing-import-lists
  if impl(ghc >= 7.2)
    ghc-options: -Wincomplete-uni-patterns
                 -Widentities
  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-exported-signatures
                 -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options: -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists
                 -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options: -Wambiguous-fields
                 -Wmissing-kind-signatures
                 -Woperator-whitespace
                 -Wredundant-bang-patterns
  if impl(ghc >= 9.4)
    ghc-options: -Wredundant-strictness-flags
                 -Wforall-identifier
                 -Woperator-whitespace-ext-conflict
  if impl(ghc >= 9.4.1)
    ghc-options: -Wgadt-mono-local-binds
                 -Wtype-equality-out-of-scope
                 -Wtype-equality-requires-operators
  if impl(ghc >= 9.6.1)
    -- ghc-options: -Wloopy-superclass-solve
    -- Bug: https://gitlab.haskell.org/ghc/ghc/-/issues/24071
  if impl(ghc >= 9.8.1)
    ghc-options: -Wincomplete-export-warnings
