cabal-version: 2.2

name: hs-opentelemetry-instrumentation-grpc-haskell
version: 0.1.0.0
synopsis:
description:
homepage: https://github.com/iand675/hs-opentelemetry
bug-reports: https://github.com/iand675/hs-opentelemetry/issues
license: BSD-3-Clause
license-file: LICENSE
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@herp.co.jp
copyright: 2023 Kazuki Okamoto (岡本和樹)
category: Telemetry, Network
build-type: Simple
tested-with: GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.5
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wno-name-shadowing
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  default-language: Haskell2010

common release
  import: common
  if impl(ghc >= 6.4)
    ghc-options: -Wincomplete-record-updates
  if impl(ghc >= 6.8)
    ghc-options: -Wmonomorphism-restriction
  if impl(ghc >= 7.0)
    ghc-options: -Wmissing-import-lists
  if impl(ghc >= 7.2)
    ghc-options: -Wincomplete-uni-patterns
                 -Widentities
  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-exported-signatures
                 -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options: -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists
                 -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options: -Wmissing-kind-signatures
                 -Woperator-whitespace
                 -Wredundant-bang-patterns
  if impl(ghc >= 9.4)
    ghc-options: -Wmisplaced-pragmas
                 -Wredundant-strictness-flags
                 -Wforall-identifier
  if impl(ghc >= 9.4.1)
    ghc-options: -Wgadt-mono-local-binds
                 -Wtype-equality-out-of-scope
                 -Wtype-equality-requires-operators
  if impl(ghc >= 9.6.1)
    ghc-options: -Wloopy-superclass-solve

library
  import: release
  hs-source-dirs: src
  exposed-modules: OpenTelemetry.Instrumentation.GRPC
  build-depends: hs-opentelemetry-api,
                 bytestring,
                 case-insensitive,
                 grpc-haskell,
                 grpc-haskell-core,
                 http-types,
                 proto3-suite,
                 text
