cabal-version: 2.4

name: hs-opentelemetry-instrumentation-hedis
version: 0.0.0.0
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@herp.co.jp

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  default-language: Haskell2010

custom-setup
  setup-depends:
    base,
    Cabal,
    directory,
    filepath

library
  import: common
  hs-source-dirs: src, gen
  exposed-modules: OpenTelemetry.Instrumentation.Hedis
  other-modules: OpenTelemetry.Instrumentation.Hedis.Internal.Action
                 OpenTelemetry.Instrumentation.Hedis.Internal.Wrapper
  autogen-modules: OpenTelemetry.Instrumentation.Hedis.Internal.Action
  build-depends: hs-opentelemetry-api,
                 hedis >= 0.15.1,
                 bytestring,
                 iproute,
                 mtl,
                 safe-exceptions,
                 text,
                 unliftio-core
  ghc-options: -Wcompat
               -Wno-name-shadowing
  if impl(ghc >= 6.4)
    ghc-options: -Wincomplete-record-updates
  if impl(ghc >= 6.8)
    ghc-options: -Wmonomorphism-restriction
  if impl(ghc >= 7.0)
    ghc-options: -Wmissing-import-lists
  if impl(ghc >= 7.2)
    ghc-options: -Wincomplete-uni-patterns
                 -Widentities
  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-exported-signatures
                 -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options: -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists
                 -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options: -Wmissing-kind-signatures
                 -Woperator-whitespace
                 -Wredundant-bang-patterns
